--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /*? Next.js supports different ways of styling your application, including:
 Global CSS: Simple to use and familiar for those experienced with traditional CSS, but can lead to larger CSS bundles and difficulty managing styles as the application grows.
 CSS Modules: Create locally scoped CSS classes to avoid naming conflicts and improve maintainability.
