--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,8 +17,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  overflow: hidden;
+  /* height: 100vh; */
+  /* overflow: hidden; */
 }
 h1 {
   font-size: 2.5rem;
